# contextlens

./: .gitignore  LICENSE  README.md  app.py  hf_README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: demo.py
scripts/: push_to_hf_space.py
src/contextlens/: __init__.py  analyzer.py  capture.py  cli.py  costs.py  decompose.py  detectors.py  models.py  rebilling.py  reporter.py  tokenizer.py
tests/: test_analyzer.py  test_costs.py  test_decompose.py  test_detectors.py  test_rebilling.py
