[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextlens-profiler"
version = "0.1.0"
description = "A diagnostic profiler for LLM agent context windows — flamegraph for your prompt."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ContextLens Contributors" }]
keywords = ["llm", "agents", "context", "profiler", "tokens", "cost", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tiktoken>=0.7.0",
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-jinja2",
]

[project.scripts]
contextlens = "contextlens.cli:main"

[project.urls]
Homepage = "https://github.com/contextlens/contextlens"
Repository = "https://github.com/contextlens/contextlens"
Issues = "https://github.com/contextlens/contextlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/contextlens"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["contextlens"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/contextlens"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
